add files to cmake add desctructor code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 set(SOURCE_FILES
     src/standardball.h
     src/standardball.cpp
+    src/jokerball.h
+    src/jokerball.cpp
     src/ball.h
     src/scale.cpp
     src/scale.h
